testsuites/LLT/compiler/Diagnose/lex_test/lex_unterminated_char_literal/case1.expect.out
error: unterminated single-line string
  ==> case1.cj:14:2:
   | 
14 |     'cangjie
   |     ^^^^^^^^^ unterminated single-line string
   | 
   # note: consider using multi-line string if you intended to include '\n' in string

1 error generated, 1 error printed.
